--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
              <div class="about-col-2">
               <h1 class="sub-title" >About me</h1>
-              <p>My name is Archana Kumari, and I am pursuing MCA (Batch '27) from IGDTUW, after completing my B.Sc. (Hons.) in Computer Science from the University of Delhi. I have a strong interest in software development, system design, and full-stack development. I am passionate about learning new technologies, solving problems, and building efficient solutions. Through this internship, I aim to apply my knowledge in real-world projects, gain industry experience, and further strengthen my technical and professional skills  </p>
+              <p>My name is Archana Kumari, and I am pursuing MCA (Batch '27) from IGDTUW, after completing my B.Sc. (Hons.) in Computer Science from the University of Delhi. I have a strong interest in software development, system design, and full-stack development. I am passionate about learning new technologies, solving problems, and building efficient solutions.   </p>
 
             <div class="tab-titles">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
