--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="row">
              <div clSass="about-col-1">
-             <img src="c:\Users\ujjwa\Desktop\personal portfolio\images\profile.jpg" height="500" weight="500">
+             <img src="images\profile.jpg" height="500" weight="500">
             </div>
              <div class="about-col-2">
               <h1 class="sub-title" >About me</h1>
